apps/n8n/webservice/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: halo
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
